# SimpleLogoGenerator

./: .gitignore  LICENSE  README.md  font-list.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.node.json  vite.config.ts
.github/workflows/: get-fonts-list.yml  gh-pages.yml  pypi.yml  test.yml
PACKAGENAME/: __init__.py
assets/: index--wFQsE_0.js  index-0124d3c5.js  index-01cbaa65.js  index-0434c29d.js  index-04aa140f.js  index-050888fe.js  index-05ec8998.js  index-066ccf37.css  index-07665004.js  index-0a0b069b.js  index-0af202eb.js  index-0b755413.css  index-0b7e5ec4.js  index-10f87632.js  index-1100ccc1.js  index-11c30d55.js  index-132f6119.js  index-138075dc.js  index-16ecb4fa.js  index-1e2d20f0.css  index-21c2bc07.js  index-2230c452.js  index-2314e1a0.js  index-238bc5b6.css  index-243a32d9.js  index-247b7d7b.js  index-2572afee.js  index-2693f6b5.js  index-27b6197e.js  index-2c64a62e.js  index-2da92d8b.js  index-2dc05df3.js  index-2yId55TC.js  index-30c487be.js  index-33955351.js  index-35205ca7.css  index-39386e84.js  index-404ecb11.js  index-45212a50.js  index-458dd120.js  (+202 more)
docs/: conf.py  index.rst
docs/_templates/: version.html
setup/: git_commit_msg.command  pre_pullRequest_check.command
setup/hooks/: commit-msg
src/: App.tsx  Arrange.tsx  Container.tsx  DownloadableSVG.tsx  Input.tsx  Palette.tsx  Preview.tsx  SVGLogo.tsx  defaultProperties.ts  elements.js  fonts.js  index.css  index.js  main.tsx  properties.tsx  style.scss  svg.js  types.ts
src/assets/: font-list.json
(+38 files in other folders)
