[tool.poetry]
name = "PACKAGENAME"
version = "0.1.0"
description = "TEMPLATE"
license = "MIT"
readme = "README.md"
authors = ["KaoruNishikawa <k.nishikawa@a.phys.nagoya-u.ac.jp>"]
homepage = "https://github.com/USERNAME/PACKAGENAME"
repository = "https://github.com/USERNAME/PACKAGENAME"

[tool.poetry.dependencies]
python = "^3.7.1"
numpy = "^1.19"

[tool.poetry.dev-dependencies]
black = "^21.10b"
flake8 = "^3.8"
ipykernel = "^6.3"
jupyter = "^1.0"
m2r2 = "^0.2"
notebook = "^6.4"
pydata-sphinx-theme = "^0.4"
pytest = "^5.2"
sphinx = "^3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

